kubernetes/webapp-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp-deployment
  labels:
    app: webapp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: webapp
  template:
    metadata:
      labels:
        app: webapp
    spec:
      containers:
      - name: webapp
        image: local/webapp:1.0.0
        imagePullPolicy: Never
        ports:
        - containerPort: 9080
---
apiVersion: v1
kind: Service
metadata:
  name: webapp-service-internal
spec:
  selector:
    app: webapp
  ports:
    - protocol: TCP
      port: 9080
      targetPort: 9080
---
apiVersion: v1
kind: Service
metadata:
  name: webapp-service-external
spec:
  type: NodePort
  selector:
    app: webapp
  ports:
    - protocol: TCP
      port: 9080
      targetPort: 9080
      nodePort: 30100
