kubernetes/webapp-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webapp-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: demo-webapp.ch
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: webapp-service-internal
            port:
              number: 9080
